--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.6"
   },
