--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://dakolech.github.io/react-app",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.4",
